@@ -24,10 +24,12 @@
 
 #include <gst/check/gstcheck.h>
 
+G_BEGIN_DECLS
 
 void gst_buffer_straw_start_pipeline (GstElement * bin, GstPad * pad);
 GstBuffer *gst_buffer_straw_get_buffer (GstElement * bin, GstPad * pad);
 void gst_buffer_straw_stop_pipeline (GstElement * bin, GstPad * pad);
 
+G_END_DECLS
 
 #endif /* __GST_BUFFER_STRAW_H__ */
